--- a/ve/ve.csproj
+++ b/ve/ve.csproj
@@ -3,6 +3,9 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp3;net48</TargetFrameworks>
   </PropertyGroup>
+  <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
@@ -22,7 +25,8 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.8.1" />
     <PackageReference Include="Avalonia.Desktop" Version="0.8.1" />
-    <PackageReference Include="morelinq" Version="3.1.1" />
+    <PackageReference Include="FFmpeg.AutoGen" Version="4.1.0.5" />
+    <PackageReference Include="morelinq" Version="3.2.0" />
     <PackageReference Include="ReactiveUI" Version="9.19.5" />
   </ItemGroup>
   <ItemGroup>
@@ -63,4 +67,7 @@
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy /d /i /r /s /y &quot;$(ProjectDir)deps\ffmpeg&quot; &quot;$(TargetDir)ffmpeg&quot;" />
+  </Target>
 </Project>
