--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 Thumbs.db
 #Ignore files built by Visual Studio
 *.obj
-*.exe
 *.pdb
 *.user
 *.aps
@@ -19,11 +18,12 @@ Thumbs.db
 *.cache
 *.ilk
 *.log
-[Bb]in
-[Dd]ebug*/
+[Bb]in/[Dd]ebug*/
+[Bb]in/[Rr]elease*/
 *.lib
 *.sbr
 obj/
+[Dd]ebug*/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
