--- a/ve/ve.csproj
+++ b/ve/ve.csproj
@@ -19,6 +19,12 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Remove="deps\**" />
+    <Compile Remove="deps\**" />
+    <EmbeddedResource Remove="deps\**" />
+    <None Remove="deps\**" />
+  </ItemGroup>
+  <ItemGroup>
     <AvaloniaResource Remove="Controls\Graph.xaml" />
     <AvaloniaResource Remove="Controls\GraphSectionItem.xaml" />
     <AvaloniaResource Remove="Controls\GraphTimePanel.xaml" />
